<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/firstNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/firstNameTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/firstNameValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstNameLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lastNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/lastNameTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/lastNameValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genderLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastNameLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/genderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/genderTitle"
                android:textSize="@dimen/normal_text" />

            <Spinner
                android:id="@+id/genderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:contentDescription="@string/ageTitle"
                android:gravity="center"
                android:text="@string/ageTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/ageValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:maxLength="3"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeAddressLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ageLayout"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homeAddressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:contentDescription="@string/ageTitle"
                android:gravity="center"
                android:text="@string/homeAddressTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/homeAddressValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="textPostalAddress"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cityLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/homeAddressLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/cityTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/cityNameValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stateLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/stateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/stateTitle"
                android:textSize="@dimen/normal_text" />

            <Spinner
                android:id="@+id/stateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zipCodeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stateLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/zipCodeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/zipCodeTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/zipCodeValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="5"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zipCodeLayout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phoneNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/phoneNumberTitle"
                android:textSize="@dimen/normal_text" />

            <EditText
                android:id="@+id/phoneNumberValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addImageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumberLayout"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:layout_weight="0.3"
                android:gravity="center"
                />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:layout_weight="0.7"
                android:background="@drawable/blue_gradient"
                android:gravity="center"
                android:text="@string/addImageTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addImageLayout"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:layout_weight="0.5"
                android:background="@drawable/blue_gradient"
                android:gravity="center"
                android:text="@string/saveTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/item_margin"
                android:layout_weight="0.5"
                android:background="@drawable/blue_gradient"
                android:gravity="center"
                android:text="@string/cancelTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>